# moziBot

./: .env.example  .env.local.example  .gitignore  .oxfmtrc.jsonc  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  HANDOFF.md  README.md  bunfig.toml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  roadmap.md  tasks.md  tsconfig.json  vitest.config.ts  vitest.global-setup.ts  vitest.integration.config.ts
.works/: session-lifecycle-development-plan.md  session-lifecycle-semantics-and-validation.md
container/: Dockerfile  Dockerfile.sandbox-common  build-sandbox-common.sh  build.sh  entrypoint.sh
desktop-widget/: .gitignore  .oxlintrc.json  README.md  index.html  package.json  tsconfig.json
desktop-widget/src-tauri/: Cargo.toml  tauri.conf.json
desktop-widget/src-tauri/src/: main.rs
devDocs/: agent-operating-model.md
docs/: API.md  CONFIGURATION_GUIDE.md  CONTRIBUTING.md  DESIGN_DESKTOP_WIDGET_UI.md  DESIGN_EXEC_REFACTOR.md  DESIGN_TAPE_SYSTEM.md  GETTING_STARTED.md  OPENCLAW_TO_MOZI_MIGRATION_BLUEPRINT.md  OPENCLAW_TO_MOZI_PHASE_PLAN.md  OPTIMIZATION_ROADMAP.md  PLAN_BROWSER_RELAY.md  README.md  ROADMAP_DISCORD.md  SECRET_BROKER.md  SYSTEM.md  TASKS_BROWSER_RELAY.md  TELEGRAM_DISCORD_OPS_RUNBOOK.md  exec-supervisor.md  memory_gap_analysis.md  memory_issues.md  telegram-streaming-plan.md
release/: README.md  config.example.jsonc
schema/: config.schema.json
scripts/: changelog-draft.sh  copy-templates.ts  generate-config-schema.ts  package.sh  release-check.ts  release.sh  sync-version-from-tag.ts  sync-version.ts
specifying/: acp-improvements.md
(+859 files in other folders)
